--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 }
 #btn{
     height: 50px;
+    cursor: pointer;
 }
 #text{
     font-size: 20px;
@@ -34,8 +35,21 @@
    color: white;
    border: none;
    border-radius: 5px;
+   cursor: pointer;
 
 }
 #num{
     font-size: 22px;
+}
+#nextpage{
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: antiquewhite;
+    border-radius: 5px;
+    font-size: 15px;
+}
+a{
+    text-decoration: none;
+    color: #fb641b;
 }
